deploy-sample-app/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-rest-world
  labels:
    app: hello-rest-world

spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-rest-world
  template:
    metadata:
      labels:
        app: hello-rest-world
    spec:
      containers:
        - name: hello-rest-world
          image: thomaspoignant/hello-world-rest-json
          ports:
            - name: web
              containerPort: 80
