deploy-sample-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-rest-world-service

spec:
  type: ClusterIP
  ports:
    - port: 5679
      targetPort: 80

  selector:
    app: hello-rest-world-service
